--- a/task2/Viewer/Viewer/Views/MainWindow.axaml
+++ b/task2/Viewer/Viewer/Views/MainWindow.axaml
@@ -16,9 +16,10 @@
     </Design.DataContext>
 
 	<Grid RowDefinitions="30, *">
-		<Grid Grid.Row="0" Background="DarkSlateGray" ColumnDefinitions="*,*">
-	        <Button Grid.Column="0" Content="Open" BorderBrush="LightSlateGray" BorderThickness="2" Click="OnButtonClick"/>
-			<TextBlock Grid.Column="1" Name="temp"/>
+		<Grid Grid.Row="0" Background="DarkSlateGray" ColumnDefinitions="100,100,*">
+	        <Button Grid.Column="0" Command="{Binding LoadImages}" Content="Open" BorderBrush="LightSlateGray" BorderThickness="2" Width="100"/>
+			<Button Grid.Column="1" Command="{Binding CancelOperation}" Content="Cancel" BorderBrush="LightSlateGray" BorderThickness="2" Width="100"/>
+			<TextBlock Grid.Column="2" Name="temp"/>
 		</Grid>
 		<Grid Grid.Row="1" ColumnDefinitions="*, 2*, *">
 			<ListBox Grid.Column="0"
